[package]
name = "loco-command-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loco-dcc = { path = "../dcc", version = "0.1" }
loco-core = { path = "../core", version = "0.1"}
bitvec = { version = "0.22", default-features = false }
embedded-hal = "1.0.0-alpha.6"
nb = "1.0"
log = "0.4"
num-traits = "0.2"
heapless = "0.7"
