[package]
name = "loco-core"
version = "0.1.0"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3"

[dependencies.num-traits]
version = "0.2"
default-features = false
