[package]
name = "loco-dcc"
version = "0.1.0"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2018"

[patch.crates-io]
loco-core = { path = "../core" }
embedded-hal-mock-clock = { path = "../embedded-hal-mock-clock" }
embedded-hal-vcd = { path = "../embedded-hal-vcd" }

[dependencies]
loco-core = "0.1"
embedded-hal = "1.0.0-alpha.4"
embedded-time = "0.10"
nb = "1.0"
log = "0.4"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
embedded-hal-mock-clock = "0.1"
embedded-hal-vcd = "0.1"
test-env-log = "0.2"
env_logger = "0.8"
