[package]
name = "loco-dcc"
version = "0.1.0"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2021"

[dependencies]
loco-core = { path = "../core", version = "0.1" }
embedded-hal = "1.0.0-alpha.9"
embedded-hal-async = "0.2.0-alpha.0"
log = "0.4"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
env_logger = "0.8"
