[package]
name = "susi"
version = "0.1.0"
authors = ["Niclas Hoyer <niclas@verbugt.de>"]
edition = "2018"

[features]
default = ["std"]
std = []

# patches needed to adapt to embedded-hal 1.0.0
[patch.crates-io]
embedded-hal-mock = { git = "https://github.com/niclashoyer/embedded-hal-mock", branch = "hal-1.0.0" }
drogue-embedded-timer = { git = "https://github.com/niclashoyer/drogue-embedded-timer", branch = "hal-1.0.0" }

[dependencies]
embedded-hal = "1.0.0-alpha.4"
embedded-time = "0.10"
nb = "1.0"
num-derive = "0.3"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
embedded-hal-mock = "0.8"
linux-embedded-hal = "0.4.0-alpha.0"
drogue-embedded-timer = "0.2"
thread-priority = "0.2"
