[package]
name = "loco-susi"
version = "0.1.0"
authors = ["Niclas Hoyer <niclas@verbugt.de>"]
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
loco-core = { path = "../core", version = "0.1" }
loco-dcc = { path = "../dcc", version = "0.1" }
embedded-hal = "1.0.0-alpha.6"
embedded-time = "0.10"
nb = "1.0"
num-derive = "0.3"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
embedded-hal-mock = "0.8"
embedded-hal-sync-pins = "0.5"
embedded-hal-mock-clock = "0.1"
linux-embedded-hal = "0.4.0-alpha.0"
drogue-embedded-timer = "0.2"
thread-priority = "0.2"
serial_test = "0.5"
