[package]
name = "loco-z21"
version = "0.1.0"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-nal = "0.6"
bitflags = "1.2"
loco-core = { path = "../core", version = "0.1" }
loco-xpressnet = { path = "../xpressnet", version = "0.1", features = ["z21"] }
nb = "1.0"
std-embedded-nal = "0.1.2"
log = "0.4"
env_logger = "0.9.0"

[dev-dependencies]
