[package]
name = "linux-dcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loco-command-station = { path = "../.." }
loco-dcc = { path = "../../../dcc", version = "0.1" }
loco-core = { path = "../../../core", version = "0.1" }
linux-embedded-hal = "0.4.0-alpha.1"
drogue-embedded-timer = "0.2"
embedded-time = "0.12"
embedded-hal = "1.0.0-alpha.6"
nb = "1.0"
log = "0.4"
env_logger = "0.9"
termion = "1.5"
